# pre-commit-workshop

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  example.py  pyproject.toml
src/no_print_statements/: cli.py  run_checks.py
