[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prevent-print-statements-hook"
version = "0.1.0"
authors = [{name = "RiskConcile", email = "am@riskconcile.com"},]
description = "pre-commit hook to prevent print statements in codebase."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python"
]
dependencies = []
requires-python = ">=3.8"
optional-dependencies.dev = [
    "pre-commit",  # so you can run hooks on the codebase
    "pytest",  # remember to add tests for your hook
]

scripts.no-print-statements = "no_print_statements.cli:main"

# optional (if you are making a package)
[tool.setuptools.packages.find]
where = ["src"]
